--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
-<html lang='en'>
-<head?
-<meta charset=""
+<html lang="en-us">
+<head>
+  <meta charset="UTF-8">
+  <title>Activity 1: Basic HTML Bio</title>
+</head>
 
+<body>
+    <nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+            </ul>
+        </ul>
+    </nav>
+
+</body>
 </html>
