--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 
 <body>
+    <h1>I did this</h1>
+    <p>I did this pandas code.</p>
     <nav>
         <ul>
             <li><a href="/">Home</a></li>
